k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: popphp-service
spec:
  selector:
    app: popphp-legacy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
